--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 {
-  "Token" : ""
+  "Token" : "BQCUY-wXi8SjgMn-ZltoNP8YgRfJaPkn8ab92uShuQjVmYoePNHWDHbg-_bVmu2G4T4VTipP2BdUYGtI7bP330hn8hMhlADghYXcIc0FM9mN80joXcIan-3S0dYaGBUwNaG7s20996o0SJI1uIAgcHUko2agq4wooyENXEB3hW5F"
 }
