fixed < 100 playlists, added bin, added ARL in config

--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,5 @@
 {
-    "downloadLocation": "../downloads/",
+    "downloadLocation": "./downloads",
     "tracknameTemplate": "%artist% - %title%",
     "albumTracknameTemplate": "%tracknumber% - %title%",
     "playlistTracknameTemplate": "%position% - %artist% - %title%",
